force-app/main/default/objects/GitHub_Workflow_Finding__c/GitHub_Workflow_Finding__c.object-meta.xml
<CustomObject>
    <label>GitHub Workflow Finding</label>
    <nameField>
        <label>Workflow Finding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GitHub Workflow Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>