force-app/main/default/objects/GitHub_Workflow_Finding__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>