force-app/main/default/objects/GitHub_Workflow_Finding__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>