force-app/main/default/objects/GitHub_Workflow_Finding__c/fields/Run_Url__c.field-meta.xml
<CustomField>
    <fullName>Run_Url__c</fullName>
    <defaultValue>null</defaultValue>
    <label>Run URL</label>
    <type>Url</type>
</CustomField>