force-app/main/default/objects/GitHub_Workflow_Finding__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>