force-app/main/default/objects/GitHub_Workflow_Finding__c/fields/Workflow_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Run_Id__c</fullName>
    <label>Workflow Run Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>