force-app/main/default/objects/GitHub_Workflow_Finding__c/fields/Workflow_Run_Number__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Run_Number__c</fullName>
    <label>Workflow Run Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>